# hls-cabal-plugin-syntax-error-mismatch

./: .gitignore  LICENSE  README.md  cabal.project  flake.nix  hie.yaml  hithere.cabal  readme.org
.github/workflows/: CI.yaml
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
